package code.tiendung.core;

public interface Observer {
    void update(String status);
}
